chore(homeassistant): comment out backups volume and NFS configuration in statefulset.yaml
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/homeassistant/statefulset.yaml
+++ b/manifests/homeassistant/statefulset.yaml
@@ -35,9 +35,9 @@ spec:
               mountPath: /config/configuration.yaml
               readOnly: true
 
-            - name: backups
-              mountPath: /config/backups
-              readOnly: false
+            # - name: backups
+            #   mountPath: /config/backups
+            #   readOnly: false
 
             - name: dbus
               mountPath: /run/dbus
@@ -65,7 +65,7 @@ spec:
           hostPath:
             path: /run/dbus
             type: Directory
-        - name: backups
-          nfs:
-            server: nas.home.lex.la
-            path: /nfs/ha-backup
+        # - name: backups
+        #   nfs:
+        #     server: nas.home.lex.la
+        #     path: /nfs/ha-backup
