chore(minecraft): refactor PVC configuration in StatefulSet manifest
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/minecraft/statefulset.yaml
+++ b/manifests/minecraft/statefulset.yaml
@@ -31,7 +31,11 @@ spec:
               cpu: "100m"
             limits:
               memory: "6Gi"
-      volumes:
-        - name: app
-          persistentVolumeClaim:
-            claimName: minecraft-app-pvc
+  volumeClaimTemplates:
+    - metadata:
+        name: app
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 20Gi
