chore(minecraft): update service port and add nodePort for Minecraft application
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/minecraft/service.yaml
+++ b/manifests/minecraft/service.yaml
@@ -9,5 +9,6 @@ spec:
   ports:
     - name: minecraft-tcp
       protocol: TCP
-      port: 51413
+      port: 25565
+      nodePort: 25565
       targetPort: minecraft-tcp
