chore(minecraft): rename application to papermc and update manifests
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/workloads/minecraft.yaml
+++ b/argocd/workloads/minecraft.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: minecraft
+  name: papermc
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: workloads
   destination:
-    namespace: minecraft
+    namespace: paper
     server: "https://kubernetes.default.svc"
   sources:
-    - path: manifests/minecraft
+    - path: manifests/papermc
       repoURL: https://github.com/lexfrei/k8s.git
       targetRevision: HEAD
   syncPolicy:
