chore(argocd): update metrics-server configuration to include TLS settings
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/monitoring/metrics-server.yaml
+++ b/argocd/monitoring/metrics-server.yaml
@@ -14,6 +14,12 @@ spec:
     - repoURL: "https://kubernetes-sigs.github.io/metrics-server/"
       targetRevision: "3.12.2"
       chart: metrics-server
+      helm:
+        valuesObject:
+          apiService:
+            insecureSkipTLSVerify: false
+          tls:
+            type: cert-manager
   syncPolicy:
     automated:
       prune: true
