--- a/argocd/monitoring/metrics-server.yaml
+++ b/argocd/monitoring/metrics-server.yaml
@@ -6,7 +6,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
-  project: infra
+  project: monitoring
   destination:
     namespace: kube-system
     server: "https://kubernetes.default.svc"
@@ -14,12 +14,12 @@ spec:
     - repoURL: "https://kubernetes-sigs.github.io/metrics-server/"
       targetRevision: "3.12.2"
       chart: metrics-server
-      helm:
-        valuesObject:
-          apiService:
-            insecureSkipTLSVerify: false
-          tls:
-            type: cert-manager
+      # helm:
+      #   valuesObject:
+      #     apiService:
+      #       insecureSkipTLSVerify: false
+      #     tls:
+      #       type: cert-manager
   syncPolicy:
     automated:
       prune: true
