--- a/manifests/papermc/all.yaml
+++ b/manifests/papermc/all.yaml
@@ -24,7 +24,7 @@ spec:
           imagePullPolicy: IfNotPresent
           env:
             - name: MEMORYSIZE
-              value: "5G"
+              value: "6G"
           ports:
             - containerPort: 25565
               protocol: TCP
@@ -40,10 +40,10 @@ spec:
               mountPath: /data
           resources:
             requests:
-              memory: "5Gi"
-              cpu: "500m"
+              memory: "6G"
+              cpu: "2000m"
             limits:
-              memory: "6Gi"
+              memory: "6G"
   volumeClaimTemplates:
     - metadata:
         name: data
