chore(papermc): update container image for PaperMC server
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/papermc/all.yaml
+++ b/manifests/papermc/all.yaml
@@ -20,11 +20,8 @@ spec:
     spec:
       containers:
         - name: papermc
-          image: marctv/minecraft-papermc-server:1.21.4
+          image: lexfrei/papermc:1.21.4
           imagePullPolicy: IfNotPresent
-          env:
-            - name: MEMORYSIZE
-              value: "5G"
           ports:
             - containerPort: 25565
               protocol: TCP
