--- a/manifests/papermc/all.yaml
+++ b/manifests/papermc/all.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - name: papermc
           image: docker.io/lexfrei/papermc:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 25565
               protocol: TCP
