fix(papermc): update PaperMC container image to version 1.21.4-222 and change imagePullPolicy to IfNotPresent
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/papermc/all.yaml
+++ b/manifests/papermc/all.yaml
@@ -20,8 +20,8 @@ spec:
     spec:
       containers:
         - name: papermc
-          image: docker.io/lexfrei/papermc:latest
-          imagePullPolicy: Always
+          image: docker.io/lexfrei/papermc:1.21.4-222
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 25565
               protocol: TCP
