fix(deployment): update estimator image tag to v1.0.0
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/estimator/deployment.yaml
+++ b/manifests/estimator/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: estimator
-          image: lexfrei/estimator:latest
+          image: lexfrei/estimator:1.0.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
