fix(longhorn): set defaultClass to false in persistence values
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/infra/longhorn.yaml
+++ b/argocd/infra/longhorn.yaml
@@ -18,7 +18,7 @@ spec:
       valuesObject:
         persistence:
           defaultClassReplicaCount: 1
-          defaultClass: true
+          defaultClass: false
         ingress:
           enabled: true
           host: longhorn.k8s.home.lex.la
