--- a/manifests/papermc/all.yaml
+++ b/manifests/papermc/all.yaml
@@ -32,7 +32,7 @@ spec:
       containers:
         - name: papermc
           image: docker.io/lexfrei/papermc:1.21.5-19
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 25565
               protocol: TCP
