fix(transmission): update ownership in init container to 1000:1000 and set security context for main container
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/transmission/statefulset.yaml
+++ b/manifests/transmission/statefulset.yaml
@@ -19,7 +19,8 @@ spec:
           command: ["/bin/sh", "-c"]
           args:
             - |
-              chown -R 911:911 /config /downloads
+              echo "Changing ownership of mounted volumes to 1000:1000"
+              chown -R 1000:1000 /config /downloads
           volumeMounts:
             - name: config
               mountPath: /config
@@ -51,6 +52,9 @@ spec:
             limits:
               memory: "512Mi"
               cpu: "200m"
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 1000
       volumes:
         - name: config
           persistentVolumeClaim:
