--- a/manifests/transmission/statefulset.yaml
+++ b/manifests/transmission/statefulset.yaml
@@ -13,21 +13,11 @@ spec:
       labels:
         app: transmission
     spec:
-      initContainers:
-        - name: init-chown-mounts
-          image: busybox:latest
-          command: ["/bin/sh", "-c"]
-          args:
-            - |
-              echo "Changing ownership of mounted volumes to 1000:1000"
-              chown -R 1000:1000 /config /downloads
-          volumeMounts:
-            - name: config
-              mountPath: /config
-            - name: downloads
-              mountPath: /downloads
-          securityContext:
-            runAsUser: 0
+      securityContext:
+        fsGroup: 1000
+        supplementalGroups:
+          - 1000
+
       containers:
         - name: transmission
           image: linuxserver/transmission:4.0.6
@@ -55,6 +45,11 @@ spec:
           securityContext:
             runAsUser: 1000
             runAsGroup: 1000
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
       volumes:
         - name: config
           persistentVolumeClaim:
