--- a/manifests/transmission/statefulset.yaml
+++ b/manifests/transmission/statefulset.yaml
@@ -17,10 +17,29 @@ spec:
         fsGroup: 1000
         supplementalGroups:
           - 1000
+      initContainers:
+        - name: fix-permissions
+          image: alpine:latest
+          command: ["/bin/sh", "-c"]
+          args:
+            - |
+              mkdir -p /config && chown -R 1000:1000 /config /downloads
+          volumeMounts:
+            - name: config
+              mountPath: /config
+            - name: downloads
+              mountPath: /downloads
+          securityContext:
+            runAsUser: 0
 
       containers:
         - name: transmission
           image: linuxserver/transmission:4.0.6
+          env:
+            - name: PUID
+              value: "1000"
+            - name: PGID
+              value: "1000"
           ports:
             - containerPort: 9091
               name: http
@@ -46,7 +65,6 @@ spec:
             runAsUser: 1000
             runAsGroup: 1000
             allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
             capabilities:
               drop:
                 - ALL
