refactor(transmission): consolidate security context for container and pod
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/transmission/statefulset.yaml
+++ b/manifests/transmission/statefulset.yaml
@@ -13,9 +13,14 @@ spec:
       labels:
         app: transmission
     spec:
+      securityContext:
+        fsGroup: 1000
       containers:
         - name: transmission
           image: linuxserver/transmission:4.0.6
+          securityContext:
+            runAsUser: 1000
+            runAsGroup: 1000
           env:
             - name: TZ
               value: "UTC"
