refactor(transmission): move PUID and PGID environment variables to container env section
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/transmission/statefulset.yaml
+++ b/manifests/transmission/statefulset.yaml
@@ -18,10 +18,11 @@ spec:
       containers:
         - name: transmission
           image: linuxserver/transmission:4.0.6
-          securityContext:
-            runAsUser: 1000
-            runAsGroup: 1000
           env:
+            - name: PUID
+              value: "1000"
+            - name: PGID
+              value: "1000"
             - name: TZ
               value: "UTC"
           ports:
