--- a/manifests/transmission/statefulset.yaml
+++ b/manifests/transmission/statefulset.yaml
@@ -24,7 +24,7 @@ spec:
             - name: PGID
               value: "1000"
             - name: TZ
-              value: "UTC"
+              value: "Europe/Moscow"
           ports:
             - containerPort: 9091
               name: http
