--- a/manifests/nst/all.yaml
+++ b/manifests/nst/all.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: nst
-          image: lexfrei/nst:latest
+          image: lexfrei/nst:1.0.1
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
