fix(nst): update container image version to 1.0.8 and add secret reference
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/nst/all.yaml
+++ b/manifests/nst/all.yaml
@@ -17,8 +17,11 @@ spec:
     spec:
       containers:
         - name: nst
-          image: lexfrei/nst:1.0.7
+          image: lexfrei/nst:1.0.8
           imagePullPolicy: Always
+          envFrom:
+            - secretRef:
+                name: ne-stat-toboy-secrets
           ports:
             - containerPort: 8080
               name: http
