--- a/manifests/nst/all.yaml
+++ b/manifests/nst/all.yaml
@@ -27,13 +27,13 @@ spec:
               name: http
           livenessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: http
             initialDelaySeconds: 10
             periodSeconds: 20
           readinessProbe:
             httpGet:
-              path: /
+              path: /healthz
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
