--- a/values/coredns.yaml
+++ b/values/coredns.yaml
@@ -5,6 +5,8 @@ service:
 servers:
   - zones:
       - zone: .
+        scheme: dns://
+        use_tcp: true
     port: 53
     plugins:
       - name: errors
