--- a/argocd/infra/cloudflared.yaml
+++ b/argocd/infra/cloudflared.yaml
@@ -20,8 +20,7 @@ spec:
           secretName: tunnel-credentials
           tunnelName: k8s-expose
           ingress:
-            - hostname: "*.lex.la"
-              service: http://traefik.traefik-system.svc:9090
+            - service: http://traefik.traefik-system.svc:9090
           enableDefault404: false
           originRequest:
             http2Origin: true
