--- a/manifests/estimator/deployment.yaml
+++ b/manifests/estimator/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: estimator
-          image: lexfrei/estimator:1.0.5
+          image: ghcr.io/lexfrei/estimator:2.0.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
