--- a/values/cilium.yaml
+++ b/values/cilium.yaml
@@ -1,6 +1,5 @@
 # Kubernetes API Server configuration
-# Using kube-vip VIP for HA, fallback to direct node IP
-k8sServiceHost: "172.16.101.101"
+k8sServiceHost: "auto"
 k8sServicePort: "6443"
 
 # Enable kube-proxy replacement
