--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -39,9 +39,9 @@ spec:
             # More relaxed scrape interval to reduce resource usage
             intervalOverride: 30s
           extraArgs:
-            retention.period: "7d"  # Хранить данные не более 7 дней
-            dedup.minScrapeInterval: "15s"  # Дедупликация частых метрик
-            diskCache.cachePath: "/cache"  # Использовать кэш на диске для ускорения запросов
+            retention.period: "7d"
+            dedup.minScrapeInterval: "15s"
+            diskCache.cachePath: "/cache"
           extraVolumes:
             - name: cache-volume
               emptyDir:
@@ -50,17 +50,6 @@ spec:
           extraVolumeMounts:
             - name: cache-volume
               mountPath: "/cache"
-          ingress:
-            enabled: true
-            annotations:
-              traefik.ingress.kubernetes.io/router.entrypoints: websecure
-              cert-manager.io/cluster-issuer: cloudflare-issuer
-            hosts:
-              - "vm.k8s.home.lex.la"
-            tls:
-              - secretName: vm-tls
-                hosts:
-                  - vm.k8s.home.lex.la
   syncPolicy:
     automated:
       prune: true
