--- a/manifests/cilium/internal-gateway.yaml
+++ b/manifests/cilium/internal-gateway.yaml
@@ -19,8 +19,9 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
+
     - name: https-home-lex-la
-      hostname: "argocd.home.lex.la"
+      hostname: "*.home.lex.la"
       protocol: HTTPS
       port: 443
       allowedRoutes:
@@ -31,20 +32,9 @@ spec:
         certificateRefs:
           - name: home-lex-la-tls
             kind: Secret
-    - name: https-transmission-home-lex-la
-      hostname: "transmission.home.lex.la"
-      protocol: HTTPS
-      port: 443
-      allowedRoutes:
-        namespaces:
-          from: All
-      tls:
-        mode: Terminate
-        certificateRefs:
-          - name: home-lex-la-tls
-            kind: Secret
-    - name: https-longhorn-k8s-home-lex-la
-      hostname: "longhorn.k8s.home.lex.la"
+
+    - name: https-k8s-home-lex-la
+      hostname: "*.k8s.home.lex.la"
       protocol: HTTPS
       port: 443
       allowedRoutes:
