chore(gateway): comment out external-dns annotations in gateway configurations
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/cilium/gateway.yaml
+++ b/manifests/cilium/gateway.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: kube-system
   annotations:
     cert-manager.io/cluster-issuer: "cloudflare-issuer"
-    external-dns.alpha.kubernetes.io/target: "217.78.182.161"
-    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    # external-dns.alpha.kubernetes.io/target: "217.78.182.161"
+    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
   gatewayClassName: cilium
   addresses:
