chore: update sectionName for internal objects
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/manifests/transmission/httproute.yaml
+++ b/manifests/transmission/httproute.yaml
@@ -7,7 +7,7 @@ spec:
   parentRefs:
     - name: cilium-gateway-internal
       namespace: kube-system
-      sectionName: https-transmission-home-lex-la
+      sectionName: https-home-lex-la
   hostnames:
     - transmission.home.lex.la
   rules:
