--- a/manifests/longhorn/httproute.yaml
+++ b/manifests/longhorn/httproute.yaml
@@ -8,7 +8,7 @@ spec:
   parentRefs:
     - name: cilium-gateway-internal
       namespace: kube-system
-      sectionName: https-longhorn-k8s-home-lex-la
+      sectionName: https-home-lex-la
   hostnames:
     - longhorn.k8s.home.lex.la
   rules:
