fix: update hostnames in dashboard, internal gateway, and httproute configurations
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd-disabled/dashboard.yaml
+++ b/argocd-disabled/dashboard.yaml
@@ -18,14 +18,14 @@ spec:
         ingress:
           enabled: true
           hosts:
-            - dashboard.k8s.home.lex.la
+            - dashboard.home.lex.la
           annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
             cert-manager.io/cluster-issuer: "cloudflare-issuer"
           tls:
             - secretName: dashboard-k8s-home-lex-la-tls
               hosts:
-                - dashboard.k8s.home.lex.la
+                - dashboard.home.lex.la
   project: default
   syncPolicy:
     automated:
