fix(victoria-metrics): temporarily disable helm-managed vmagent for debugging

--- a/argocd/monitoring/vm-stack.yaml
+++ b/argocd/monitoring/vm-stack.yaml
@@ -30,9 +30,7 @@ spec:
           enabled: false
         # VictoriaMetrics components
         vmagent:
-          spec:
-            remoteWrite:
-              - url: http://vmsingle-victoria-metrics-k8s-stack.monitoring.svc:8428/api/v1/write
+          enabled: false
         vmsingle:
           resources:
             requests:
