--- a/manifests/system-upgrade-controller/system-plan.yaml
+++ b/manifests/system-upgrade-controller/system-plan.yaml
@@ -8,10 +8,28 @@ type: Opaque
 stringData:
   upgrade.sh: |
     #!/bin/sh
-    apt update && apt upgrade -y
-    apt autoremove -y
+    set -e
+
+    echo "Starting system upgrade on $(hostname)"
+
+    # Update package lists
+    apt-get update
+
+    # Perform upgrade with automatic yes to prompts
+    DEBIAN_FRONTEND=noninteractive apt-get upgrade --yes --option Dpkg::Options::="--force-confdef" --option Dpkg::Options::="--force-confold"
+
+    # Clean up unnecessary packages
+    apt-get autoremove --yes
+    apt-get autoclean
+
+    # Check if reboot is required
     if [ -f /var/run/reboot-required ]; then
+      echo "Reboot required after upgrade"
+      # Sync filesystems before reboot
+      sync
       reboot
+    else
+      echo "Upgrade completed successfully, no reboot required"
     fi
 ---
 apiVersion: upgrade.cattle.io/v1
@@ -22,6 +40,11 @@ metadata:
 spec:
   concurrency: 1
   cordon: true
+  drain:
+    force: true
+    ignoreDaemonSets: true
+    deleteEmptyDirData: true
+    timeout: 900
   nodeSelector:
     matchExpressions:
       - key: node-role.kubernetes.io/control-plane
@@ -32,11 +55,17 @@ spec:
   secrets:
     - name: system-upgrade-secret
       path: /host/run/system-upgrade/secrets
-  version: focal
+  version: plucky
+  tolerations:
+    - operator: Exists
   upgrade:
-    image: ubuntu:noble
-    command: ["chroot", "/host"]
-    args: ["sh", "/run/system-upgrade/secrets/upgrade.sh"]
+    image: ubuntu:plucky
+    command:
+      - chroot
+      - /host
+    args:
+      - sh
+      - /run/system-upgrade/secrets/upgrade.sh
 ---
 apiVersion: upgrade.cattle.io/v1
 kind: Plan
@@ -46,6 +75,11 @@ metadata:
 spec:
   concurrency: 1
   cordon: true
+  drain:
+    force: true
+    ignoreDaemonSets: true
+    deleteEmptyDirData: true
+    timeout: 900
   nodeSelector:
     matchExpressions:
       - key: node-role.kubernetes.io/control-plane
@@ -54,8 +88,14 @@ spec:
   secrets:
     - name: system-upgrade-secret
       path: /host/run/system-upgrade/secrets
-  version: focal
+  version: plucky
+  tolerations:
+    - operator: Exists
   upgrade:
-    image: ubuntu:noble
-    command: ["chroot", "/host"]
-    args: ["sh", "/run/system-upgrade/secrets/upgrade.sh"]
+    image: ubuntu:plucky
+    command:
+      - chroot
+      - /host
+    args:
+      - sh
+      - /run/system-upgrade/secrets/upgrade.sh
