--- a/values/kube-vip.yaml
+++ b/values/kube-vip.yaml
@@ -8,3 +8,9 @@ env:
   vip_leaderelection: "false"
   cp_enable: "true"
   svc_enable: "false"
+
+  # in case of node denial, update the following to the API server IP and port
+  # Then do:
+  # helm template kube-vip kube-vip/kube-vip --namespace kube-system --values values/kube-vip.yaml | kubectl apply -f -
+  KUBERNETES_SERVICE_HOST: "172.16.101.1"
+  KUBERNETES_SERVICE_PORT: "6443"
