--- a/manifests/grafana/dashboards.yaml
+++ b/manifests/grafana/dashboards.yaml
@@ -11,9 +11,19 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: k8s-dashboard
+  name: coredns-dashboard
 spec:
   instanceSelector:
     matchLabels:
       dashboards: "grafana"
-  url: "https://grafana.com/api/dashboards/15757/revisions/43/download"
+  url: "https://grafana.com/api/dashboards/14981/revisions/2/download"
+---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: kube-state-metrics-dashboard
+spec:
+  instanceSelector:
+    matchLabels:
+      dashboards: "grafana"
+  url: "https://grafana.com/api/dashboards/315/revisions/3/download"
