feat(metrics-server): add helm values for metrics and service monitor
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/argocd/monitoring/metrics-server.yaml
+++ b/argocd/monitoring/metrics-server.yaml
@@ -14,6 +14,13 @@ spec:
     - repoURL: "https://kubernetes-sigs.github.io/metrics-server/"
       targetRevision: "3.13.0"
       chart: metrics-server
+      helm:
+        valuesObject:
+          metrics:
+            enabled: true
+
+          serviceMonitor:
+            enabled: true
   syncPolicy:
     automated:
       prune: true
