fix(argocd): update server rules to use backendRefs for argocd-server
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/values/argocd.yaml
+++ b/values/argocd.yaml
@@ -171,9 +171,9 @@ server:
     hostnames:
       - argocd.home.lex.la
     rules:
-      - matches:
-          - method:
-              type: Exact
+      - backendRefs:
+          - name: argocd-server
+            port: 8080
   # extensions:
   #   enabled: true
   #   extensionList:
