fix(argocd): update server rules to use matches instead of backendRefs for argocd-server
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/values/argocd.yaml
+++ b/values/argocd.yaml
@@ -171,9 +171,9 @@ server:
     hostnames:
       - argocd.home.lex.la
     rules:
-      - backendRefs:
-          - name: argocd-server
-            port: 8080
+      - matches:
+          - method:
+              type: Exact
   # extensions:
   #   enabled: true
   #   extensionList:
