--- a/argocd/infra/internal-dns.yaml
+++ b/argocd/infra/internal-dns.yaml
@@ -24,7 +24,7 @@ spec:
             webhook:
               image:
                 repository: ghcr.io/lexfrei/external-dns-unifios-webhook
-                tag: pr-16
+                tag: "0.0.2"
               env:
                 - name: WEBHOOK_UNIFI_API_KEY
                   valueFrom:
