fix(inventory): add missing k8s-worker-02 host configuration
Signed-off-by: Aleksei Sviridkin <f@lex.la>

--- a/ansible/inventory/production.yaml
+++ b/ansible/inventory/production.yaml
@@ -16,6 +16,8 @@ all:
           hosts:
             k8s-worker-01:
               ansible_host: 172.16.101.2
+            k8s-worker-02:
+              ansible_host: 172.16.101.3
 
       vars:
         # K3s version for upgrades
